--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Dotfiles: Git repo used for syncing personal dotfiles across devices
+Dotfiles: Git repo used for syncing personal dotfiles between devices
